--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.2.148:3306/testtest
+url=jdbc:mysql://192.168.2.148:3306/testtest?useUnicode=true&characterEncoding=utf-8&transformedBitIsBoolean=true&useSSL=false&serverTimezone=Asia/Shanghai
 username=root
 password=root
 #定义初始连接数
